--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,17 @@ packages = [{include = "book_data_collect_server"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+flake8 = "^6.0.0"
+black = "^23.3.0"
+fastapi = "^0.99.1"
+uvicorn = {extras = ["standard"], version = "^0.22.0"}
+jinja2 = "^3.1.2"
+aiofiles = "^23.1.0"
+python-dotenv = "^1.0.0"
+odmantic = "^0.9.2"
+asyncio = "^3.4.3"
+pymongo = {extras = ["srv"], version = "^4.4.0"}
+aiohttp = "^3.8.4"
 
 
 [build-system]
